Add favicon & change home page links

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -5,11 +5,11 @@ template: splash
 hero:
     tagline: This serves as a central place for stuff relating to our Minecraft servers.
     actions:
-        - text: Prism Launcher Guide
-          link: /guides/install-prism/
+        - text: Java Guide
+          link: /guides/install-java/
           icon: right-arrow
           variant: primary
-        - text: All Guides
-          link: /guides
+        - text: Discord
+          link: discord.theuwucafe.net
           icon: external
 ---
