Fix index page discord link

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -10,6 +10,6 @@ hero:
           icon: right-arrow
           variant: primary
         - text: Discord
-          link: discord.theuwucafe.net
+          link: https://discord.theuwucafe.net
           icon: external
 ---
